<resources>
    <string name="app_name">RecipeBookAndroid</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login">Login</string>
    <string name="action_sign_in">Sign in</string>
    <string name="go_to_resistration">Sign Up</string>
    <string name="register">Register</string>
    <string name="cancel_button">Cancel</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="ingredients_title">Ingredients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="process_description_here">Process Description here…</string>
    <string name="cooking_processes">Cooking Processes</string>
    <string name="dish_description_here">Dish Description Here...</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="new_recipe_creator">New Recipe Creator</string>
    <string name="ingredient">Ingredient</string>
    <string name="amount">amount</string>
    <string name="add">Add</string>
    <string name="commit">Commit</string>
    <string-array name="dishType">
        <item>Dish Type</item>
        <item>Bakery</item>
        <item>Salades</item>
        <item>Grill</item>
        <item>Fast and Easy</item>
        <item>National</item>
        <item>Other</item>
    </string-array>
</resources>